<resources>
    <string name="app_name">Insta Downloader</string>

    <!--Splash String-->
    <string name="download_unlimited_photos_videos"><![CDATA[Download Unlimited Photos & Videos]]></string>
    <string name="ad_text">This Action might contain Ad</string>

    <!--Main Activity String-->
    <string name="home_bn">Home</string>
    <string name="browser_bn">Browser</string>
    <string name="download_bn">Download</string>
    <string name="help_toolbar">help</string>
    <string name="premium_toolbar">premium</string>

    <!--Navigation Drawer-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="terms_conditions_drawer"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy_drawer">Privacy Policy</string>
    <string name="feedback_drawer">Feedback</string>
    <string name="share_app_drawer">Share this app</string>
    <string name="rate_us_drawer">Rate Us</string>
    <string name="app_version_drawer">App Version 0.0.1</string>
    <string name="remove_ads_drawer">Remove Ads</string>
    <string name="share_app_message">Check out My App on the Play Store: https://play.google.com/store/apps/details?id=</string>

    <!--Home Fragment-->
    <string name="et_hint_text">Paste link here...</string>
    <string name="no_downloads">No downloads found yet!</string>
    <string name="paste_link">Paste Link</string>
    <string name="recent_downloaded">Recent Downloaded</string>
    <string name="view_all">View All</string>
    <string name="recently_search">Recently Search</string>
    <string name="download_finished">Download Finished</string>
    <string name="download_status_finished">Download Status: Finished</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="empty_field">Empty Field</string>

    <!--Language Activity-->
    <string name="save_btn">Save</string>
    <string name="language_title">Language</string>

    <!--Help Bottom Sheet-->
    <string name="help_title">How to Download</string>
    <string name="help_subtitle">Method 1/2</string>

    <!--Download Menu BottomSheet-->
    <string name="repost_txt">Repost</string>
    <string name="view_txt">View on Instagram</string>
    <string name="whatsapp_txt">Share on WhatsApp</string>
    <string name="share_txt">Share</string>
    <string name="rename_txt">Rename</string>
    <string name="delete_txt">Delete</string>
    <string name="_00_00">00:00</string>

    <!--Permission custom Dialog box-->
    <string name="permission_denied_title">Permission Request</string>
    <string name="permission_denied_message">Provide permission for the media to be loaded.</string>
    <string name="ok_btn">Allow Access</string>

    <!--Settings Activity-->
    <string name="setting_title">Settings</string>
    <string name="upgrade_to">Upgrade to</string>
    <string name="pro">PRO</string>
    <string name="setting_cardview_subtitle">Ads free experience</string>
    <string name="setting_cv_btn_text">Try Pro Now</string>
    <string name="auto_download">Auto Download</string>
    <string name="auto_download_subtitle">Auto or manual download setting is preferred</string>
    <string name="english">English</string>
    <string name="how_to_download">How to Download</string>
    <string name="tap_to_show_tutorial">Tap to show tutorial</string>
    <string name="feedback">Feedback</string>
    <string name="share_your_feedback">Share your feedback</string>
    <string name="give_it_a_rating_on_the_play_store">Give it a rating on the Play Store!</string>
    <string name="share_this_app">Share this app</string>
    <string name="with_friends_and_family">with friends and family</string>
    <string name="read_further">Read further</string>
    <string name="check_the_terms">Check the terms</string>
    <string name="app_version">App Version</string>
    <string name="_0_0_1">0.0.1</string>

    <!--Delete Dialog box-->
    <string name="delete_dialog_box">Delete!</string>
    <string name="desc_delete_dialogbox">Do you want to delete?</string>

    <!--Verify Url Dialog box-->
    <string name="verifying_url">Verifying URL</string>
    <string name="checking_the_validity">Checking the validity and reliability of URL</string>

    <!--Recent Search Activity-->
    <string name="clear_history">Clear History</string>
    <string name="subtitle_clear_history">Would you like to remove recent search history on Instagram profiles?</string>
    <string name="yes_clear">Yes, Clear</string>
    <string name="no_search_item_found">No Search Item found</string>

    <!--Rate us bottom sheet-->
    <string name="rate_this_app">Rate this app</string>
    <string name="provide_a_rating">Please provide a rating for us on Google Play</string>
    <string name="very_poor">Very Poor</string>
    <string name="poor">Poor</string>
    <string name="normal">Normal</string>
    <string name="great">Great</string>
    <string name="love_it">Love It</string>
    <string name="rate_experience">Please rate your experience with us</string>
    <string name="rate_us_google_play">Rate us Google Play</string>
</resources>