<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download_menu_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/edit_text_padding_horizontal"
    tools:context=".features.bottomSheets.DownloadMenu">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closeIcon"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/padding_page"
        android:layout_marginEnd="@dimen/nav_indicator_height"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginBottom="@dimen/padding_page"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutRepost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_padding_vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@drawable/download_menu_items_bg"
        android:paddingVertical="@dimen/edit_text_padding_vertical"
        android:paddingHorizontal="@dimen/remove_ad_text"
        app:layout_constraintTop_toBottomOf="@+id/closeIcon"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repost_txt"
            android:textSize="@dimen/drawer_header_text"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_rounded_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repost_icon"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_page"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@drawable/download_menu_items_bg"
        android:paddingVertical="@dimen/edit_text_padding_vertical"
        android:paddingHorizontal="@dimen/padding_page_small"
        app:layout_constraintTop_toBottomOf="@+id/layoutRepost"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_txt"
            android:textSize="@dimen/drawer_header_text"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_rounded_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/view_icon"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWhatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_page"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@drawable/download_menu_items_bg"
        android:paddingVertical="@dimen/edit_text_padding_vertical"
        android:paddingHorizontal="@dimen/padding_page_small"
        app:layout_constraintTop_toBottomOf="@+id/layoutView"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp_txt"
            android:textSize="@dimen/drawer_header_text"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_rounded_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/whatsapp_icon"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_page"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@drawable/download_menu_items_bg"
        android:paddingVertical="@dimen/edit_text_padding_vertical"
        android:paddingHorizontal="@dimen/padding_page_small"
        app:layout_constraintTop_toBottomOf="@+id/layoutWhatsapp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_txt"
            android:textSize="@dimen/drawer_header_text"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_rounded_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/send_icon"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_page"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@drawable/download_menu_items_bg"
        android:paddingVertical="@dimen/edit_text_padding_vertical"
        android:paddingHorizontal="@dimen/padding_page_small"
        app:layout_constraintTop_toBottomOf="@+id/layoutShare"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rename_txt"
            android:textSize="@dimen/drawer_header_text"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_rounded_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rename_icon"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_page"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:background="@drawable/download_menu_items_bg"
        android:paddingVertical="@dimen/edit_text_padding_vertical"
        android:paddingHorizontal="@dimen/padding_page_small"
        app:layout_constraintTop_toBottomOf="@+id/layoutRename"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_txt"
            android:textSize="@dimen/drawer_header_text"
            android:layout_weight="1"
            android:fontFamily="@font/sf_pro_rounded_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_icon"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>