<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_page"
        app:cardCornerRadius="@dimen/edit_text_padding_horizontal"
        android:layout_gravity="center"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".features.dialogBox.PermissionCheckDialogFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_page_large">
            <ImageView
                android:id="@+id/ivDialogIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/permission_dialog_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_denied_title"
                app:layout_constraintTop_toBottomOf="@+id/ivDialogIcon"
                android:layout_marginTop="@dimen/remove_ad_margin"
                android:fontFamily="@font/sf_pro_rounded_bold"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/remove_ad_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDialogContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_denied_message"
                app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textColor="@color/adsTextColor"
                android:gravity="center_horizontal"
                android:textSize="@dimen/splash_subTitle_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_btn"
                android:textColor="@color/subtitleColor"
                android:backgroundTint="@color/PermissionDialogColor"
                android:fontFamily="@font/sf_pro_rounded_bold"
                android:layout_marginTop="@dimen/remove_ad_margin"
                android:paddingHorizontal="@dimen/image_size"
                app:layout_constraintTop_toBottomOf="@+id/tvDialogContent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>