<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".app.activities.SplashActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_splashIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_icon"
        app:layout_constraintBottom_toTopOf="@+id/tv_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_page_small"
        android:fontFamily="@font/sf_pro_rounded_bold"
        android:text="@string/app_name"
        android:includeFontPadding="false"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/splash_main_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splashIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_content_small"
        android:text="@string/download_unlimited_photos_videos"
        android:textColor="@color/subtitleColor"
        android:textSize="@dimen/splash_subTitle_text"
        android:includeFontPadding="false"
        android:fontFamily="@font/sf_pro_rounded_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Title" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb_linearProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_padding_horizontal"
        app:indicatorColor="@color/titleColor"
        app:trackCornerRadius="@dimen/padding_content_small"
        app:layout_constraintBottom_toTopOf="@+id/tv_ads"
        app:layout_constraintEnd_toEndOf="@+id/tv_Title"
        app:layout_constraintStart_toStartOf="@+id/tv_Title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_page_large"
        android:text="@string/ad_text"
        android:textColor="@color/adsTextColor"
        android:textSize="@dimen/splash_ad_line_text"
        android:includeFontPadding="false"
        android:fontFamily="@font/sf_pro_rounded_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>