<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.dialogBox.ClearHistoryDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/edit_text_padding_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="@dimen/padding_page_small"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivDialogIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_page_large"
                android:layout_marginTop="@dimen/padding_page"
                android:src="@drawable/clear_history_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/closeIcon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_page_large"
                android:layout_marginTop="@dimen/remove_ad_margin"
                android:fontFamily="@font/sf_pro_rounded_bold"
                android:text="@string/clear_history"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/remove_ad_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivDialogIcon" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDialogContentRecent"
                android:fontFamily="@font/sf_pro_rounded_medium"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:text="@string/subtitle_clear_history"
                android:textColor="@color/ViewAllColor"
                android:textSize="@dimen/remove_ad_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle"/>

            <Button
                android:id="@+id/btnClearHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50dp"
                android:layout_marginTop="@dimen/remove_ad_margin"
                android:layout_marginBottom="@dimen/padding_page_large"
                android:paddingVertical="@dimen/padding_page"
                android:backgroundTint="@color/PermissionDialogColor"
                android:fontFamily="@font/sf_pro_rounded_bold"
                android:text="@string/yes_clear"
                android:textColor="@color/subtitleColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvDialogContentRecent"
                app:layout_constraintStart_toStartOf="@id/tvDialogContentRecent"
                app:layout_constraintTop_toBottomOf="@+id/tvDialogContentRecent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>